--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "webdriver",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nazarko333/WebdriverIO.git"
-  },
-  "author": "Nazar",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nazarko333/WebdriverIO/issues"
-  },
-  "homepage": "https://github.com/nazarko333/WebdriverIO#readme",
-  "dependencies": {
-    "@wdio/cli": "^7.10.1",
-    "webdriverio": "^7.10.1"
-  },
-  "devDependencies": {
-    "@wdio/allure-reporter": "^7.10.1",
-    "@wdio/local-runner": "^7.10.1",
-    "@wdio/mocha-framework": "^7.10.1",
-    "@wdio/selenium-standalone-service": "^7.10.1",
-    "@wdio/spec-reporter": "^7.10.1"
-  }
+    "name": "webdriver",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "wdio wdio.conf.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/nazarko333/WebdriverIO.git"
+    },
+    "author": "Nazar",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/nazarko333/WebdriverIO/issues"
+    },
+    "homepage": "https://github.com/nazarko333/WebdriverIO#readme",
+    "dependencies": {
+        "@babel/cli": "^7.14.8",
+        "@babel/core": "^7.15.0",
+        "@babel/preset-env": "^7.15.0",
+        "@babel/register": "^7.15.3",
+        "@wdio/cli": "^7.10.1",
+        "webdriverio": "^7.10.1"
+    },
+    "devDependencies": {
+        "@wdio/allure-reporter": "^7.10.1",
+        "@wdio/local-runner": "^7.10.1",
+        "@wdio/mocha-framework": "^7.10.1",
+        "@wdio/selenium-standalone-service": "^7.10.1",
+        "@wdio/spec-reporter": "^7.10.1"
+    }
 }
