--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
         "@babel/preset-env": "^7.15.0",
         "@babel/register": "^7.15.3",
         "@wdio/cli": "^7.10.1",
+        "@wdio/sync": "^7.11.0",
         "webdriverio": "^7.10.1"
     },
     "devDependencies": {
         "@wdio/allure-reporter": "^7.10.1",
-        "@wdio/local-runner": "^7.10.1",
-        "@wdio/mocha-framework": "^7.10.1",
+        "@wdio/local-runner": "^7.11.0",
+        "@wdio/mocha-framework": "^7.11.0",
         "@wdio/selenium-standalone-service": "^7.10.1",
-        "@wdio/spec-reporter": "^7.10.1"
+        "@wdio/spec-reporter": "^7.10.1",
+        "chromedriver": "^92.0.1",
+        "wdio-chromedriver-service": "^7.2.0"
     }
 }
