--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "wdio wdio.conf.js"
+        "test": "npm run clean && npm run temp && wdio wdio.conf.js ",
+        "clean": "rm -rf temp",
+        "temp": "mkdir temp\\screenshots"
     },
     "repository": {
         "type": "git",
@@ -23,13 +25,13 @@
         "@babel/register": "^7.15.3",
         "@wdio/cli": "^7.10.1",
         "@wdio/sync": "^7.11.0",
+        "chai": "^4.3.4",
         "webdriverio": "^7.10.1"
     },
     "devDependencies": {
         "@wdio/allure-reporter": "^7.10.1",
         "@wdio/local-runner": "^7.11.0",
         "@wdio/mocha-framework": "^7.11.0",
-        "@wdio/selenium-standalone-service": "^7.10.1",
         "@wdio/spec-reporter": "^7.10.1",
         "chromedriver": "^92.0.1",
         "wdio-chromedriver-service": "^7.2.0"
