--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
         "@babel/core": "^7.15.0",
         "@babel/preset-env": "^7.15.0",
         "@babel/register": "^7.15.3",
-        "@wdio/cli": "^7.10.1",
-        "@wdio/sync": "^7.11.0",
+        "@wdio/cli": "^7.11.1",
+        "@wdio/sync": "^7.11.1",
         "chai": "^4.3.4",
-        "webdriverio": "^7.10.1"
+        "wdio": "^5.1.0",
+        "webdriverio": "^7.11.1"
     },
     "devDependencies": {
         "@wdio/allure-reporter": "^7.10.1",
