--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "scripts": {
         "api": "npm run clean && npm run temp && wdio api.wdio.js",
         "test": "npm run clean && npm run temp && wdio wdio.conf.js && npm run report ",
-        "report": "allure generate temp/allure-results -o temp/allure-report && allure open temp/allure-report && node email.js",
+        "report": "allure generate temp/allure-results -o temp/allure-report && node email.js && allure open temp/allure-report",
         "clean": "rm -rf temp",
+        "azure": "npm run temp && wdio wdio.conf.js",
         "temp": "mkdir temp\\screenshots"
 
     },
