--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "main": "index.js",
     "scripts": {
         "api": "npm run clean && npm run temp && wdio api.wdio.js",
-        "test": "npm run clean && npm run temp && wdio wdio.conf.js && npm run report ",
+        "test": "npm run clean && npm run temp && wdio wdio.conf.js && npm run report",
         "report": "allure generate temp/allure-results -o temp/allure-report && node email.js && allure open temp/allure-report",
         "clean": "rm -rf temp",
-        "azure": "npm run temp && wdio wdio.conf.js",
+        "azure": "npm run temp && wdio wdio.conf.js && npm run report",
         "temp": "mkdir temp\\screenshots"
     },
     "repository": {
